# anchor

./: .cspell-anchor-dictionary.txt  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bump-version.sh
avm/: Cargo.toml  anchor-solana-map.toml  install  platform-tools-map.toml  solana-cli-versions.toml
avm/src/: lib.rs  main.rs  platform_tools.rs  resolve.rs  solana.rs
avm/tests/: resolution_flow.rs
cli/: Cargo.toml
cli/cli-macros/: Cargo.toml
cli/npm-package/: README.md  package-lock.json  package.json
cli/src/: abs_path.rs  account.rs  checks.rs  codama.rs  config.rs  coverage.rs  keygen.rs  legacy_idl.rs  lib.rs  metadata.rs  profile.rs  program.rs  rust_template.rs  template.rs
cli/src/debugger/: arena.rs  cargo_deps.rs  gdb.rs  highlight.rs  loose.rs  mod.rs  model.rs  path_label.rs  rustc_wrapper.rs  sbpf.sublime-syntax  source.rs  tui.rs
cli/src/fetch/: chunks.rs  decompress.rs  history.rs  legacy.rs  mod.rs  output.rs  parallel.rs  pmp.rs  rpc.rs  sessions.rs
cli/src/flamegraph/: mod.rs  svg.rs  trace.rs
cli/tests/: debugger_symbol_resolution.rs
client/: Cargo.toml
client/example/: run-test.sh
client/src/: blocking.rs  cluster.rs  lib.rs  nonblocking.rs
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/spec/src/: lib.rs
idl/src/: convert.rs
lang/: Cargo.toml
lang-v2/: Cargo.toml  README.md
lang-v2/derive/: Cargo.toml
lang-v2/derive/src/: access_control.rs  constant.rs  error_code.rs  idl.rs  init_space.rs  lib.rs  parse.rs  pda.rs  pod_wrapper.rs
lang-v2/src/: context.rs  context_cpi.rs  cpi.rs  cursor.rs  dispatch.rs  event.rs  idl_build.rs  lib.rs  loader.rs  pod.rs  prelude.rs  program.rs  programs.rs  system_program.rs  traits.rs
lang-v2/src/accounts/: borsh_account.rs  boxed.rs  interface.rs  mod.rs  program.rs  serialized_account.rs  signer.rs  slab.rs  slab_hooks.rs  system_account.rs  sysvar.rs  unchecked_account.rs
lang-v2/src/testing/: account_buffer.rs  mod.rs  sbf_input_buffer.rs
lang-v2/tests/: account_wrapper_checks.rs  borsh_exit_semantics.rs  close_semantics.rs  cursor_and_remaining_accounts.rs  disc_vectors.rs  error_code_collisions.rs  init_space.rs  lamports.rs  macro_diagnostics.rs  miri_account_view_aliasing.rs  miri_cursor_walk.rs  miri_pod_vec.rs  miri_pod_vec_adversarial.rs  miri_slab_alignment.rs  miri_slab_construction.rs  miri_wrapper_accounts.rs  pod_vec_corrupted_len.rs  program_invoke.rs  remaining_accounts_mut_check.rs  serialized_account_custom_codec.rs  single_deser.rs  slab_resize_reproducers.rs  to_cpi_accounts_derive.rs
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/event/src/: lib.rs
lang/attribute/program/: Cargo.toml
lang/derive/accounts/: Cargo.toml
lang/derive/serde/: Cargo.toml
lang/derive/space/: Cargo.toml
lang/error/: Cargo.toml
lang/error/src/: lib.rs
lang/src/: context.rs  error.rs  lazy.rs  lib.rs
lang/src/account_set/: impls.rs  mod.rs  single_set.rs
lang/src/accounts/: account.rs  account_loader.rs  interface_account.rs  migration.rs  program.rs
lang/src/constraints/: mod.rs
lang/src/validate/: mod.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/tests/: idl_attributes.rs  program_parse.rs
lang/tests/: account_loader_truncation.rs  cpi_return_data.rs  generics_test.rs  seeds_compile.rs  serialization.rs  zero_copy.rs
spl-v2/: Cargo.toml
spl-v2/src/: associated_token.rs  extensions.rs  lib.rs  metadata.rs  mint.rs  token.rs  token_2022.rs  token_2022_extensions.rs  token_interface.rs  token_shared.rs
spl-v2/src/token_2022_extensions/: common.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  metadata_pointer.rs  mint_close_authority.rs  mod.rs  non_transferable.rs  pausable.rs  permanent_delegate.rs  token_group.rs  token_metadata.rs  transfer_fee.rs  transfer_hook.rs
spl-v2/tests/: metadata.rs  miri_spl_pod.rs
tests-v2/: Cargo.toml
tests-v2/programs/account-address-constraints/: Cargo.toml
tests-v2/programs/account-meta-signer-overrides/: Cargo.toml
tests-v2/programs/accounts/: Cargo.toml
tests-v2/programs/arg-fuzz/: Cargo.toml
tests-v2/programs/bag/: Cargo.toml
tests-v2/programs/borsh-realloc/: Cargo.toml
tests-v2/programs/callee/: Cargo.toml
tests-v2/programs/caller/: Cargo.toml
tests-v2/programs/client-builders/: Cargo.toml
tests-v2/programs/constraints/: Cargo.toml
tests-v2/programs/custom-constraints/: Cargo.toml
tests-v2/programs/declare-program/: Cargo.toml
tests-v2/programs/derives/: Cargo.toml
tests-v2/programs/dispatch-remaining/: Cargo.toml
tests-v2/programs/dup-realloc/: Cargo.toml
tests-v2/programs/equivalence/: Cargo.toml
tests-v2/programs/event-cpi/: Cargo.toml
tests-v2/programs/foreign-borsh-account/: Cargo.toml
tests-v2/programs/idl-const-seed/: Cargo.toml
tests-v2/programs/init-space-usability/: Cargo.toml
tests-v2/programs/ix-macro/: Cargo.toml
tests-v2/programs/optional-accounts/: Cargo.toml
tests-v2/programs/pda-payer/: Cargo.toml
tests-v2/programs/program-interface/: Cargo.toml
tests-v2/programs/seeds/: Cargo.toml
tests-v2/programs/space-annotation/: Cargo.toml
tests-v2/programs/spl-ata/: Cargo.toml
tests-v2/src/: lib.rs
tests-v2/tests/: account_address_constraints.rs  account_meta_signer_overrides.rs  accounts.rs  arg_fuzz.rs  bag.rs  borsh_realloc.rs  client_builders.rs  compile_fail.rs  constraints.rs  cpi.rs  custom_constraints.rs  declare_program.rs  derives.rs  dispatch_remaining.rs  dup_mut.rs  dup_realloc.rs  event_cpi.rs  idl_const_seed.rs  idl_convert.rs  idl_metadata.rs  init_space_usability.rs  ix_macro.rs  optional_accounts.rs  pda_payer.rs  program_interface.rs  seeds.rs  space_annotation.rs  spl.rs  spl_ata.rs  sysvar_idl.rs  token_2022_extensions.rs  token_interface.rs
(+844 files in other folders)
