[workspace]
members = [
    "avm",
    "cli",
    "cli/cli-macros",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/error",
    "lang/syn",
    "spl",
]
exclude = ["tests/cfo/deps/openbook-dex", "tests/swap/deps/openbook-dex"]
resolver = "2"

[workspace.package]
version = "1.1.2"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
solana-account = "3.2.0"
solana-account-decoder = "3.0.14"
solana-account-info = "3.1.0"
solana-cli-config = "3.0.14"
solana-client = "3.0.14"
solana-clock = "3.0.1"
solana-commitment-config = "3.1.1"
solana-compute-budget-interface = "3.0.0"
solana-cpi = "3.0.0"
solana-define-syscall = "3.0.0"
solana-faucet = "3.0.14"
solana-feature-gate-interface = "3.0.0"
solana-hash = "3.1.0"
solana-instruction = "3.0.0"
solana-instructions-sysvar = "3.0.0"
solana-invoke = "0.5.0"
solana-keypair = "3.0.1"
solana-loader-v3-interface = "6.0.1"
solana-message = "3.0.1"
solana-msg = "3.1.0"
solana-packet = "3.0.0"
solana-program = "3.0.0" # must be kept in sync with `cli/solana-program-version`
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-program-memory = "3.1.0"
solana-program-option = "3.0.1"
solana-program-pack = "3.1.0"
solana-pubkey = "3.0.0"
solana-pubsub-client = "3.0.14"
solana-rpc-client = "3.0.14"
solana-rpc-client-api = "3.0.14"
solana-sdk-ids = "3.1.0"
solana-signature = "3.3.0"
solana-signer = "3.0.0"
solana-stake-interface = "2.0.2"
solana-system-interface = "2.0.0"
solana-transaction-status-client-types = "3.0.0"
# FIXME: solana-sysvar 3.1.x contains breaking changes to sysvar retrieval
solana-sysvar = "3.1.1"
solana-sysvar-id = "3.1.0"
solana-transaction = "3.0.1"

# Non solana crates
cargo_toml = "0.22.3"
# Solana crates currently use 0.12, make sure to bump this to 0.13
# when they do to avoid duplicate deps
reqwest = { version = "0.12.28", default-features = false }
syn = "2"

# Internal anchor crates
anchor-lang = { path = "lang", version = "=1.1.2" }
anchor-spl = { path = "spl", version = "=1.1.2" }
anchor-client = { path = "client", version = "=1.1.2" }
anchor-syn = { path = "lang/syn", version = "=1.1.2" }
anchor-lang-error = { path = "lang/error", version = "=1.1.2" }
anchor-attribute-access-control = { path = "lang/attribute/access-control", version = "=1.1.2" }
anchor-attribute-account = { path = "lang/attribute/account", version = "=1.1.2" }
anchor-attribute-constant = { path = "lang/attribute/constant", version = "=1.1.2" }
anchor-attribute-error = { path = "lang/attribute/error", version = "=1.1.2" }
anchor-attribute-event = { path = "lang/attribute/event", version = "=1.1.2" }
anchor-attribute-program = { path = "lang/attribute/program", version = "=1.1.2" }
anchor-derive-accounts = { path = "lang/derive/accounts", version = "=1.1.2" }
anchor-derive-serde = { path = "lang/derive/serde", version = "=1.1.2" }
anchor-derive-space = { path = "lang/derive/space", version = "=1.1.2" }
anchor-cli-macros = { path = "cli/cli-macros", version = "=1.1.2" }
anchor-lang-idl = { path = "idl", version = "=0.1.4" }
anchor-lang-idl-spec = { path = "idl/spec", version = "=0.1.0" }

[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1
