[package]
name = "avm"
version.workspace = true
publish = false
edition = "2021"

[package.metadata.docs.rs]
workspace = true

[[bin]]
name = "avm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
cargo_metadata = "0.23.1"
cargo_toml.workspace = true
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
dirs = "4.0.0"
reqwest = { workspace = true, default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
semver = "1.0.4"
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.7.6"

[dev-dependencies]
tempfile = "3.3.0"
