[package]
name = "anchor-client"
version = "0.32.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "An RPC client to interact with Anchor programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = []
debug = []
mock = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.32.1" }
anyhow = "1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
solana-account = "3.0.0"
solana-account-decoder = "3.0.0"
solana-commitment-config = "3.0.0"
solana-instruction = "3.0.0"
solana-program = "3.0.0"
solana-pubsub-client = "3.0.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.0"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"
