[package]
name = "anchor-lang-v2"
version.workspace = true
edition = "2021"
description = "Anchor v2: trait-based account system for Solana (no_std)"
license = "Apache-2.0"

[features]
default = ["alloc", "guardrails", "account-resize"]
alloc = ["pinocchio/alloc"]
idl-build = ["dep:serde_json"]
# Opt-in v1-compat shims for users porting anchor-lang code. Currently
# exposes `debug!` — a `msg!`-shaped macro that accepts any Rust format
# string (`{:?}`, `{:x}`, dynamic width, …) via `alloc::format!`. Default-off
# because the heap allocation + fmt trait dispatch is meaningfully more
# expensive than v2's native `msg!`; users who explicitly want v1-parity
# logging opt in by enabling the feature.
compat = ["dep:solana-program-log"]
# Runtime safety nets that catch caller bugs the Rust borrow checker
# can't see statically. Default-on. Disabling saves CU at the cost of
# diagnostic panics for misuse — see lib.rs / Account<T> docs.
# Disable via `default-features = false` plus re-adding the features you want.
guardrails = []
# Enables `realloc_account` + the pinocchio `account-resize` entrypoint hook
# that writes `data_len` into `RuntimeAccount.padding` on every non-duplicate
# account so `AccountView::resize()` can enforce `MAX_PERMITTED_DATA_INCREASE`.
# Default-on so existing programs don't silently lose realloc support, but
# programs that never call `realloc_account` can drop it via
# `default-features = false` for ~300 bytes and ~2 CU per account saved.
# Compile-time gated (rather than a runtime error) because disabling the
# pinocchio hook without also removing `realloc_account` would silently
# corrupt the stored `original_data_len`.
account-resize = ["pinocchio/account-resize"]
# Fold `rent_exempt_lamports` to a compile-time constant using pinocchio's
# baked-in `DEFAULT_LAMPORTS_PER_BYTE` + `ACCOUNT_STORAGE_OVERHEAD`. Default-off
# because it burns the rent formula into the binary — if the runtime formula
# changes (e.g. SIMD-0194), programs built with `const-rent` would compute stale
# values until rebuilt. The default path calls `Rent::get()` at init time so
# programs pick up formula changes transparently at the cost of ~90 CU per
# `create_account` CPI. Enable via `--features const-rent` for fixed-`space`
# programs where the ~90 CU matters more than formula drift safety.
const-rent = []
# Enables the `anchor_lang_v2::testing` module: stack-backed mock pinocchio
# types (`AccountView`, SBF input buffer) used by the `tests/` integration
# tests + Miri witnesses. Also enables `const-rent` so host-side tests can
# exercise rent-dependent helpers without SVM sysvar support.
# Off by default so production BPF binaries never ship the scaffold.
# `cargo test -p anchor-lang-v2 --features testing`.
testing = ["const-rent"]

[dependencies]
anchor-derive-accounts-v2 = { path = "./derive", version = "2.0.0" }
# "copy" makes AccountView Copy — saves 2 CU per account (avoids memcpy on access).
pinocchio = { workspace = true, features = ["copy"] }
pinocchio-system = "0.6"
solana-address = { version = "2.0", features = ["bytemuck", "borsh", "syscalls", "curve25519", "wincode"] }
solana-instruction = { version = "3", default-features = false }
solana-program-error = { version = "3.0", features = ["borsh"] }
solana-msg = { version = "3.1", default-features = false, features = ["alloc"] }
solana-program-log = { version = "1.1", features = ["macro"], optional = true }
borsh = "1.5.7"
bytemuck = { version = "1", features = ["derive"] }
wincode = { version = "0.5", features = ["derive"] }
# Only pulled in under `idl-build`; the program-level IDL assembler uses it
# to structurally split type defs into `accounts[]` + `types[]` entries
# instead of doing byte-level surgery. Not shipped in production BPF binaries.
serde_json = { version = "1", optional = true }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = "5.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = "0.10"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

# Integration tests that exercise `unsafe` paths via the `testing`
# scaffold. Gated behind the `testing` feature so the mock types never
# ship in production BPF binaries.
[[test]]
name = "borsh_exit_semantics"
required-features = ["testing"]

[[test]]
name = "close_semantics"
required-features = ["testing"]

[[test]]
name = "slab_resize_reproducers"
required-features = ["testing"]

[[test]]
name = "account_wrapper_checks"
required-features = ["testing"]

[[test]]
name = "cursor_and_remaining_accounts"
required-features = ["testing"]
