[package]
name = "anchor-lang"
version = "0.32.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
edition = "2021"
license = "Apache-2.0"
description = "Solana Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
anchor-debug = [
    "anchor-attribute-access-control/anchor-debug",
    "anchor-attribute-account/anchor-debug",
    "anchor-attribute-constant/anchor-debug",
    "anchor-attribute-error/anchor-debug",
    "anchor-attribute-event/anchor-debug",
    "anchor-attribute-program/anchor-debug",
    "anchor-derive-accounts/anchor-debug",
]
derive = []
event-cpi = [
    "anchor-attribute-event/event-cpi",
    "anchor-attribute-account/event-cpi",
]
idl-build = [
    "anchor-attribute-account/idl-build",
    "anchor-attribute-constant/idl-build",
    "anchor-attribute-event/idl-build",
    "anchor-attribute-error/idl-build",
    "anchor-attribute-program/idl-build",
    "anchor-derive-accounts/idl-build",
    "anchor-derive-serde/idl-build",
    "anchor-lang-idl/build",
]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
interface-instructions = ["anchor-attribute-program/interface-instructions"]
lazy-account = [
    "anchor-attribute-account/lazy-account",
    "anchor-derive-serde/lazy-account",
]

[dependencies]
anchor-attribute-access-control = { path = "./attribute/access-control", version = "0.32.1" }
anchor-attribute-account = { path = "./attribute/account", version = "0.32.1" }
anchor-attribute-constant = { path = "./attribute/constant", version = "0.32.1" }
anchor-attribute-error = { path = "./attribute/error", version = "0.32.1" }
anchor-attribute-event = { path = "./attribute/event", version = "0.32.1" }
anchor-attribute-program = { path = "./attribute/program", version = "0.32.1" }
anchor-derive-accounts = { path = "./derive/accounts", version = "0.32.1" }
anchor-derive-serde = { path = "./derive/serde", version = "0.32.1" }
anchor-derive-space = { path = "./derive/space", version = "0.32.1" }

# `anchor-lang-idl` should only be included with `idl-build` feature
anchor-lang-idl = { path = "../idl", version = "0.1.2", optional = true }

base64 = "0.21"
bincode = "1"
borsh = "1.5.7"
bytemuck = { version = "1", features = ["derive"] }
const-crypto = "0.3.0"
solana-account-info = "3.0.0"
solana-clock = "3.0.0"
solana-cpi = "3.0.0"
solana-define-syscall = "3.0.0"
solana-feature-gate-interface = "3.0.0"
solana-instruction = "3.0.0"
solana-instructions-sysvar = "3.0.0"
## FIXME(jamie): When solana-invoke is released with 3.0 compatability, update this
solana-invoke = { git = "https://github.com/solana-foundation/solana-invoke", branch = "solana-3-0" }
solana-loader-v3-interface = { version = "6.0.0", features = ["bincode"] }
solana-msg = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = { version = "3.0.0", features = ["borsh"] }
solana-program-memory = "3.0.0"
solana-program-option = "3.0.0"
solana-program-pack = "3.0.0"
solana-pubkey = { version = "4", features = ["borsh", "bytemuck", "serde"] }
solana-sdk-ids = "3.0.0"
solana-stake-interface = { version = "2.0.0", features = ["sysvar", "bincode"] }
solana-system-interface = "2.0.0"
# FIXME: solana-sysvar 3.1.x causes breakage:
# https://github.com/anza-xyz/solana-sdk/pull/257#issuecomment-3566690576
solana-sysvar = { version = "~3.0.0", features = ["bincode"] }
solana-sysvar-id = "3.0.0"
thiserror = "1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
