[package]
name = "anchor-spl-v2"
version.workspace = true
edition = "2021"
description = "Anchor v2 SPL account types and constraint markers"
license = "Apache-2.0"

[features]
default = []

[dependencies]
anchor-lang-v2 = { path = "../lang-v2", version = "2.0.0" }
pinocchio = { workspace = true }
pinocchio-token = "0.6"
pinocchio-token-2022 = "0.3"
bytemuck = { version = "1", features = ["derive"] }
solana-address = { version = "2.0", features = ["bytemuck"] }
solana-program-error = "3.0"

[dev-dependencies]
# Cross-checks `Mint` / `TokenAccount` layout against the canonical
# `spl-token-interface` types (see `tests/miri_spl_pod.rs`). Dev-only.
spl-token-interface = "2"
solana-program-pack = "3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(kani)']
