[package]
name = "anchor-spl-v2"
version.workspace = true
edition = "2021"
description = "Anchor v2 SPL account types and constraint markers"
license = "Apache-2.0"

[features]
default = ["guardrails"]
guardrails = []
metadata = ["dep:mpl-token-metadata", "dep:solana-sysvar", "dep:spl-associated-token-account-interface"]

[dependencies]
anchor-lang-v2 = { path = "../lang-v2", version = "2.0.0" }
pinocchio = { workspace = true }
pinocchio-token = "0.6"
pinocchio-token-2022 = "0.3"
bytemuck = { version = "1", features = ["derive"] }
solana-address = { version = "2.0", features = ["bytemuck"] }
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-pubkey = "3.0"
spl-pod = "0.7"
spl-token-interface = "2"
spl-token-2022-interface = "2"
spl-token-group-interface = "0.7"
spl-token-metadata-interface = "0.8"
mpl-token-metadata = { version = "=5.1.2-alpha.2", optional = true }
solana-sysvar = { version = "3.1.1", optional = true }
spl-associated-token-account-interface = { version = "2.0.0", optional = true }

[dev-dependencies]
anchor-lang-v2 = { path = "../lang-v2", version = "2.0.0", features = ["testing"] }
borsh = "1.6.1"
# Cross-checks `Mint` / `TokenAccount` layout against the canonical
# `spl-token-interface` types (see `tests/miri_spl_pod.rs`). Dev-only.
solana-program-pack = "3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(kani)']
