[package]
name = "tests-v2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anchor-lang-v2 = { path = "../lang-v2" }
borsh-realloc = { path = "programs/borsh-realloc", features = ["cpi"] }
idl-const-seed = { path = "programs/idl-const-seed", features = ["cpi"] }
callee = { path = "programs/callee", features = ["cpi"] }
caller = { path = "programs/caller", features = ["cpi"] }
constraints = { path = "programs/constraints" }
custom-constraints = { path = "programs/custom-constraints", features = ["cpi"] }
dup-mut = { path = "programs/dup-mut" }
seeds = { path = "programs/seeds" }
spl-test = { path = "programs/spl", features = ["cpi"] }
accounts-test = { path = "programs/accounts" }
derives-test = { path = "programs/derives" }
litesvm = { version = "0.11.0", features = ["register-tracing"] }
solana-account = "3.2.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0"
solana-sdk-ids = "3.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
spl-token = "=7.0.0"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1"

[dev-dependencies]
anchor-spl-v2 = { path = "../spl-v2" }
solana-address = "2.0"
