[package]
name = "tests-v2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[test]]
name = "equivalence_spl"
path = "tests/equivalence/spl.rs"

[dependencies]
anchor-lang-v2 = { path = "../lang-v2" }
account-address-constraints = { path = "programs/account-address-constraints" }
account-meta-signer-overrides = { path = "programs/account-meta-signer-overrides" }
borsh-realloc = { path = "programs/borsh-realloc", features = ["cpi"] }
callee = { path = "programs/callee", features = ["cpi"] }
caller = { path = "programs/caller", features = ["cpi"] }
client-builders = { path = "programs/client-builders" }
constraints = { path = "programs/constraints" }
custom-constraints = { path = "programs/custom-constraints", features = ["cpi"] }
dispatch-remaining = { path = "programs/dispatch-remaining" }
dup-mut = { path = "programs/dup-mut" }
init-space-usability = { path = "programs/init-space-usability" }
ix-macro = { path = "programs/ix-macro" }
optional-accounts = { path = "programs/optional-accounts" }
seeds = { path = "programs/seeds" }
spl-test = { path = "programs/spl", features = ["cpi"] }
spl-ata-test = { path = "programs/spl-ata", features = ["cpi"] }
token-interface-test = { path = "programs/token-interface", features = ["cpi"] }
accounts-test = { path = "programs/accounts", features = ["idl-build"] }
derives-test = { path = "programs/derives" }
litesvm = { version = "0.11.0", features = ["register-tracing"] }
pinocchio = { version = "0.11", default-features = false }
solana-account = "3.2.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0"
solana-sdk-ids = "3.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
spl-token = "=7.0.0"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1"

[dev-dependencies]
anchor-spl-v2 = { path = "../spl-v2" }
anchor-lang-idl-spec = { path = "../idl/spec", version = "0.1.0" }
proptest = "1"
solana-address = "2.0"
solana-program-option = "3.1"
solana-program-pack = "3.1"
serde_json = "1"
spl-token-2022-interface = "2.1"
spl-token-group-interface = "0.7"
