[package]
name = "anchor-lang-error"
version.workspace = true
publish = true
edition = "2021"
repository = "https://github.com/otter-sec/anchor"
license = "Apache-2.0"
description = "Error definitions for anchor-lang"

[package.metadata.docs.rs]
workspace = true

[features]
default = ["borsh"]
borsh = ["dep:borsh", "solana-program-error/borsh"]

[dependencies]
anchor-attribute-error = { workspace = true }

borsh = { version = "1.5.7", optional = true }

solana-msg.workspace = true
solana-program-error = { workspace = true }
solana-pubkey.workspace = true
