[package]
name = "anchor-attribute-access-control"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/otter-sec/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for instruction access control"
edition = "2021"

[lib]
proc-macro = true

[lints.clippy]
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
unimplemented = "deny"
indexing-slicing = "deny"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { workspace = true, features = ["full"] }
