[package]
name = "anchor-attribute-account"
version.workspace = true
publish = true
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/otter-sec/anchor"
license = "Apache-2.0"
description = "Anchor attribute macro for defining an account"
edition = "2021"

[package.metadata.docs.rs]
workspace = true

[lib]
proc-macro = true

[lints.clippy]
unwrap-used = "deny"
expect-used = "deny"
panic = "deny"
unimplemented = "deny"
indexing-slicing = "deny"

[features]
anchor-debug = ["anchor-syn/anchor-debug"]
idl-build = ["anchor-syn/idl-build"]
lazy-account = []
event-cpi = []

[dependencies]
anchor-syn = { workspace = true, features = ["hash"] }
proc-macro2 = "1"
quote = "1"
syn = { workspace = true, features = ["full"] }
