[package]
name = "constraints"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = []

[dependencies]
anchor-lang-v2 = { path = "../../../lang-v2", default-features = false, features = ["alloc"] }
bytemuck = { version = "1", features = ["derive"] }
pinocchio = { version = "0.11", default-features = false, features = ["copy"] }
pinocchio-system = "0.6"
solana-program-error = "3.0"
wincode = { version = "0.5", features = ["derive"] }

[dev-dependencies]
anchor-lang-idl-spec = { path = "../../../idl/spec", version = "0.1.0" }
serde_json = "1"

[lints.rust.unexpected_cfgs]
level = "allow"
