[package]
name = "dup-realloc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "dup_realloc"

[features]
default = ["no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang-v2/idl-build"]

[dependencies]
# `account-resize` is required for the `realloc` constraint (bug #2 lurks
# if it's left out — kept here to keep the test focused on bug #3).
anchor-lang-v2 = { path = "../../../lang-v2", default-features = false, features = ["alloc", "account-resize"] }
borsh = { version = "1", default-features = false, features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
pinocchio = { version = "0.11", default-features = false, features = ["copy"] }
pinocchio-system = "0.6"
solana-program-error = "3.0"
wincode = { version = "0.5", features = ["derive"] }

[lints.rust.unexpected_cfgs]
level = "allow"
