[package]
name = "spl-test"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_test"

[features]
default = ["no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = []

[dependencies]
anchor-lang-v2 = { path = "../../../lang-v2", default-features = false, features = ["alloc"] }
anchor-spl-v2 = { path = "../../../spl-v2" }
bytemuck = { version = "1", features = ["derive"] }
pinocchio = { version = "0.11", default-features = false, features = ["copy"] }
pinocchio-system = "0.6"
solana-program-error = "3.0"
wincode = { version = "0.5", features = ["derive"] }

[lints.rust.unexpected_cfgs]
level = "allow"
