[package]
name = "hello-world-v2"
version = "0.1.0"
description = "Anchor v2 port of the hello-world benchmark program"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world_v2"

[features]
default = ["no-log-ix-name"]
no-entrypoint = []
cpi = ["no-entrypoint", "dep:borsh"]
no-idl = []
no-log-ix-name = []
idl-build = []
profile = ["anchor-v2-testing/profile"]

[dependencies]
# `default-features = false` drops the `guardrails` feature so each `Deref`
# on `Account<Counter>` skips the ~20-CU runtime borrow-state check. This is
# the "production" v2 profile — still safe because the entrypoint sets up
# the borrow, and the compiler enforces `&mut`/`&` exclusivity.
anchor-lang-v2 = { path = "../../../../lang-v2", default-features = false, features = ["alloc"] }
borsh = { version = "1", optional = true }
bytemuck = { version = "1", features = ["derive"] }
pinocchio = { version = "0.11", default-features = false, features = ["copy"] }
pinocchio-system = "0.6"
wincode = { version = "0.5", features = ["derive"] }

[dev-dependencies]
anchor-v2-testing = { path = "../../../../v2-testing" }
litesvm = "0.11"

[lints.rust.unexpected_cfgs]
level = "allow"
